<resources>
    <string name="app_name">Finance</string>
    <string name="Home">Home</string>
    <string name="Relatorio">Relatorio</string>
    <string name="Adicionar">Adicionar</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Excluir">Excluir</string>
    <string name="Perfil">Perfil</string>
    <string-array name="tipo">
        <item>Gasto</item>
        <item>Investimento</item>
    </string-array>
    <string name="dtInicialFiltro">"Data Inicial</string>
    <string name="dtFinalFiltro">Data Inicial</string>
    <string name="categoriaFiltro">Categoria</string>
    <string name="tituloFiltro">Filtro</string>

    <string name="mesAno">Mês</string>
    <string name="valorTotal">Valor total</string>
    <string name="tipoLanc">Tipo</string>

    <string name="mesAnoCat">Mês</string>
    <string name="valorTotalcat">Valor total</string>
    <string name="nomeCat">Categoria</string>

    <string name="mesAnoForn">Mês</string>
    <string name="valorTotalForn">Valor total</string>
    <string name="nomeForn">Fornecedor</string>



    <string name="mes">Por mês</string>
    <string name="filtroCat">Por categoria</string>
    <string name="filtroForn">Por fornecedor</string>

</resources>