<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Telas.Report"
    android:background="@color/VerdeDinheiro">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tgHome"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="clip_horizontal"
            android:background="@drawable/toggle_background"
            android:button="@drawable/home"
            android:scrollbars="none"
            android:text="" />

        <ToggleButton
            android:id="@+id/tgReport"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="clip_horizontal"
            android:layout_marginStart="20dp"
            android:background="@drawable/report"
            android:button="@drawable/report"
            android:scrollbars="none"
            android:text="" />

        <ToggleButton
            android:id="@+id/tgAdd"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="clip_horizontal"
            android:layout_marginStart="20dp"
            android:background="@drawable/add"
            android:button="@drawable/add"
            android:scrollbars="none"
            android:text="" />

        <ToggleButton
            android:id="@+id/tgProfile"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="clip_horizontal"
            android:layout_marginStart="20dp"
            android:background="@drawable/profile"
            android:button="@drawable/profile"
            android:scrollbars="none"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Home"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="Relatorio"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="Adicionar"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="Perfil"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="Relatorio"
        android:textColor="@color/AmareloOuro"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="#00FFFFFF"
        android:drawableLeft="@android:drawable/ic_menu_more"
        android:text="Filtro por periodo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckbMensal"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/mes" />

        <CheckBox
            android:id="@+id/ckbFitroCat"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/filtroCat" />

        <CheckBox
            android:id="@+id/ckbFiltroForn"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/filtroForn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCampoNome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/AmareloOuro"
            android:gravity="center"
            android:text="Tipo" />

        <TextView
            android:id="@+id/txtCampoMes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/AmareloOuro"
            android:gravity="center"
            android:text="Mês/Ano" />

        <TextView
            android:id="@+id/txtCampoValor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/AmareloOuro"
            android:gravity="center"
            android:text="Valor" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center" />

    <ListView
        android:id="@+id/lstResultadoLista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>